# FileGraphDB--Open-Source-Proj

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_CHECKLIST.md  README.md  ROADMAP.md  advanced_rag_baseline.py  compare_filegraph_vs_rag.py  pyproject.toml  requirements.txt  small_llm.py  test_main.py
examples/: basic_usage.py
filegraphdb/: __init__.py  cli.py  core.py  eval.py  models.py  scanner.py  store.py  text_features.py  visualize.py
reports/: codebase_graph.md  filegraphdb_code_only_examples.md  filegraphdb_user_examples.md  long_docs_file_chunk_graph.html  long_docs_filegraph_vs_rag.md  openai_comparison_report.md  politics_filegraph_vs_rag.md  politics_filegraph_vs_rag_file_chunk.md  politics_guns_eval_report.md  politics_guns_graph.html  related_53294_filegraph_vs_rag.md  sample_filegraph_vs_rag.md  sample_text_graph.html  text_features_visual.md
research/: file_native_graph_database.md  prototype_roadmap.md
samples/eval/: politics_guns_eval.jsonl  text_notes_eval.jsonl
samples/long_docs/: delay_report.txt  huge_report.txt  short_note.txt
samples/text_notes/: budget_notes.txt  garden_plan.txt  project_timeline.txt  report_summary.txt  vendor_delay.txt
scripts/: compare_related_file_query.py  create_real_comparison_image.py  eval_report.py  make_code_only_examples_pdf.py  make_user_examples_pdf.py  openai_compare.py  visualize_graph.py
tests/: test_core.py
