[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "filegraphdb"
version = "0.1.2"
description = "A local file-native graph layer for relationship-aware text retrieval."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "FileGraphDB contributors"},
]
keywords = ["graph", "rag", "retrieval", "llm", "files", "sqlite"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.23",
  "scikit-learn>=1.2",
]

[project.optional-dependencies]
models = [
  "sentence-transformers>=2.7",
]
llm = [
  "openai>=2.0",
  "torch",
  "transformers",
  "accelerate",
]
dev = [
  "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/Gihan007/FileGraphDB--Open-Source-Proj"
Issues = "https://github.com/Gihan007/FileGraphDB--Open-Source-Proj/issues"
Source = "https://github.com/Gihan007/FileGraphDB--Open-Source-Proj"

[project.scripts]
filegraph = "filegraphdb.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["filegraphdb*"]
